# routes/api.php
@@ -11,4 +11,5 @@ Route::post('register', [AuthController::class, 'register']);
 Route::post('login', [AuthController::class, 'login']);
 Route::post('forgot-password', [AuthController::class, 'forgotPassword']);
 Route::post('reset-password', [AuthController::class, 'resetPassword']);
+Route::post('/verify-otp', [AuthController::class, 'verifyOtp']);
 Route::middleware('auth:api')->post('logout', [AuthController::class, 'logout']);
